// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectTagWidget should render multiSelectTagWidget 1`] = `
<div
  className="dropdown"
>
  <div
    className="dropdown-toggle"
  >
    <span
      className="caret"
    />
  </div>
  <div
    className="undefined form-control"
  >
    <Translate(Badge)
      label="Foo"
      onDelete={[Function]}
      selected={false}
      value="foo-1"
    />
    <Typeahead
      autoFocus={false}
      disabled={false}
      focusedItemIndex={undefined}
      focusedSectionIndex={undefined}
      id={42}
      items={null}
      multiSection={false}
      noResultText="No result."
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      position="left"
      readOnly={false}
      searching={false}
      searchingText="Searching for matches…"
      theme={
        Object {
          "container": undefined,
          "itemsContainer": "items-container",
        }
      }
      value=""
    />
  </div>
</div>
`;

exports[`MultiSelectTagWidget should render multiSelectTagWidget dropdown 1`] = `
<div
  className="items-container"
  id="react-autowhatever-42"
  key="react-autowhatever-42-items-container"
/>
`;

exports[`MultiSelectTagWidget should render section title when items has category 1`] = `
<div
  className="items-container"
  id="react-autowhatever-42"
  key="react-autowhatever-42-items-container"
>
  <div
    key="react-autowhatever-42-section-0-container"
    style={Object {}}
  >
    <div
      key="react-autowhatever-42-section-0-title"
      style={Object {}}
    >
      <div>
        <span>
          pet
        </span>
      </div>
    </div>
    <ul
      key="react-autowhatever-42-section-0-items-list"
      role="listbox"
      style={Object {}}
    >
      <li
        id="react-autowhatever-42-section-0-item-0"
        onMouseDown={[Function]}
        role="option"
        style={Object {}}
      >
        <div
          title="Puppy"
        >
          <span>
            <span>
              Puppy
            </span>
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`MultiSelectTagWidget should take default message when there isnt items 1`] = `
<div
  className="items-container undefined"
  id="react-autowhatever-42"
  key="react-autowhatever-42-items-container"
>
  <span
    className="no-result"
  >
    No result.
  </span>
</div>
`;
